Multi-tenancy jumbo patch